# parser-lineage-analyzer

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  fuzz.yml  wheels.yml
docs/: ARCHITECTURE.md  plugin-signatures.md
examples/: conditional_parser.cbn  example_parser.cbn
fuzz/: fuzz_analyzer.py  fuzz_parse_code.py  fuzz_parse_config.py  fuzz_regex_algebra.py
parser_lineage_analyzer/: __init__.py  _analysis_assignment.py  _analysis_condition_facts.py  _analysis_conditions.py  _analysis_dedupe.py  _analysis_details.py  _analysis_diagnostics.py  _analysis_executor.py  _analysis_flow.py  _analysis_helpers.py  _analysis_members.py  _analysis_paths.py  _analysis_query.py  _analysis_resolution.py  _analysis_state.py  _analysis_templates.py  _grammar.py  _grok_patterns.py  _path_safety.py  _plugin_config_models.py  _plugin_signatures.py  _plugin_specs.py  _plugins_extractors.py  _plugins_mutate.py  _plugins_signature.py  _plugins_transforms.py  _regex_algebra.py  _scanner.py  _types.py  analyzer.py  ast_nodes.py  cli.py  config_parser.py  model.py  parser.py  render.py
parser_lineage_analyzer/_native/: __init__.py  _branch_merge_ext.c  _branch_merge_ext.pyx  _config_fast_ext.c  _config_fast_ext.pyx  _dedupe_ext.c  _dedupe_ext.pyx  _scanner_ext.c  _scanner_ext.pyx  _template_ext.c  _template_ext.pyx
parser_lineage_analyzer/grammar/: config.lark  statement.lark
parser_lineage_analyzer/grok_patterns/: NOTICE  __init__.py
parser_lineage_analyzer/plugin_signatures/: common.toml
scripts/: backfill_weak_sidecars.py  benchmark_native_modes.py  benchmark_native_targets.py  compat_audit_corpus.py  extract_challenge_expectations.py  parse_bug_fixture_headers.py  promote_corpus_fixture.py  runtime_fixture_check.py
tests/: _typing_helpers.py  conftest.py  perf_budgets.py  test_adversarial_exploits.py  test_analysis_resolution_state.py  test_benchmark_smoke.py  test_cli_and_public_model.py  test_compat_audit_corpus.py  test_condition_facts_normalize.py  test_core_lineage.py  test_corpus_baseline.py  test_corpus_bugs.py  test_corpus_challenge.py  test_corpus_lineage.py  test_grammar_aliases.py  test_grok_patterns.py  test_hardening.py  test_implicit_path_conditions.py  test_maximal_cleanup_contracts.py  test_native_acceleration.py  test_native_differential_fuzz.py  test_parser_frontend.py  test_performance_scaling.py  test_plugin_behavior.py  test_plugin_signatures.py  test_promote_corpus_fixture.py  test_property_parser_invariants.py  test_regex_algebra.py  test_regex_algebra_properties.py  test_remediation.py  test_review_remediation_regressions.py  test_runtime_fixture_check.py  test_token_store_get.py  test_validated_review_remediation.py
tests/fixtures/runtime/basic_routing/: expected.json  parser.cbn
tests/fixtures/test_corpus/: PROMOTION_LOG.md  README.md
tests/fixtures/test_corpus/baseline/: test_aggregate_map_action_timeout.cbn  test_baseline_aggregate.cbn  test_baseline_alter_coalesce_fields.cbn  test_baseline_ambiguous_plugin_behavior.cbn  test_baseline_ambiguous_token_stream.cbn  test_baseline_bare_regex_in_gsub.cbn  test_baseline_base64_decode.cbn  test_baseline_chained_mutate_gsub.cbn  test_baseline_chained_mutate_gsub.expected.json  test_baseline_cidr.cbn  test_baseline_cipher_and_anonymization.cbn  test_baseline_complex_boolean_precedence.cbn  test_baseline_complex_date.cbn  test_baseline_complex_interpolation.cbn  test_baseline_complex_interpolation.expected.json  test_baseline_complex_tag_routing.cbn  test_baseline_complex_tag_routing.expected.json  test_baseline_complex_type_coercion.cbn  test_baseline_conditional_cidr_match.cbn  test_baseline_conditional_else_negation.cbn  test_baseline_conditional_logic_contradiction_deep.cbn  test_baseline_conditional_tags_routing.cbn  test_baseline_conditional_tags_routing.expected.json  test_baseline_csv_implicit_columns.cbn  test_baseline_custom_plugin_http_rest.cbn  test_baseline_date_fallback_array.cbn  test_baseline_date_multiple_match.cbn  test_baseline_date_target_overwrite.cbn  test_baseline_deeply_nested_brackets.cbn  test_baseline_dissect_dynamic_fields.cbn  test_baseline_dissect_dynamic_fields.expected.json  test_baseline_dns_resolution.cbn  test_baseline_dns_resolution.expected.json  test_baseline_dotted_member_inference.cbn  test_baseline_dotted_member_inference.expected.json  test_baseline_drop_abort.cbn  test_baseline_drop_abort.expected.json  test_baseline_drop_complex.cbn  test_baseline_drop_with_complex_logic.cbn  test_baseline_dynamic_interpolation.cbn  (+121 more)
tests/fixtures/test_corpus/bugs/: test_array_index.cbn  test_balanced_regex_bareword.cbn  test_balanced_regex_bareword.expected.json  test_baseline_drop_complex_control_flow.cbn  test_challenge_700_convoluted_plugin_ordering_and_state_mutations.cbn  test_challenge_700_dynamic_fallback_routing_with_circular_dependencies.cbn  test_challenge_700_dynamic_plugin_evaluation_order_with_conflicting_if_branches.cbn  test_challenge_700_massive_plugin_sequence_ambiguous_drop.cbn  test_challenge_700_massive_plugin_sequence_ambiguous_drop.expected.json  test_challenge_io_dead_letter_queue_file_routing.cbn  test_challenge_io_output_drop_blackhole.cbn  test_complex_boolean_tag_and_regex.cbn  test_conditional_and_contradiction.cbn  test_conditional_nested.cbn  test_conditional_nested.expected.json  test_conditional_nested_contradiction.cbn  test_conditional_or_disjunction_contradiction.cbn  test_copy_object.cbn  (+27 more)
(+469 files in other folders)
